--- a/fittrackee_client/public/index.html
+++ b/fittrackee_client/public/index.html
@@ -28,6 +28,11 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     >
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css"
+      crossorigin="anonymous"
+    >
     <title>FitTrackee</title>
   </head>
   <body>
